Microdata: itemType[index] must be undefined for out-of-range index. https://bugs.webkit.org/show_bug.cgi?id=92988

Reviewed by Kentaro Hara.

Source/WebCore:

Made changes in IndexedGetter property so that it returns undefined
for out-of-range index.
Spec: http://www.w3.org/TR/WebIDL/#idl-indexed-properties
Firefox and Opera's behavior is consistent with the spec. Both returns
undefined for out-of-range index.

Also renamed the function name collectionStringOrNullIndexedPropertyGetter and
setCollectionStringOrNullIndexedGetter to collectionStringOrUndefinedIndexedPropertyGetter
and setCollectionStringOrUndefinedIndexedGetter respectively.

Test: fast/dom/MicroData/domsettabletokenlist-attributes-out-of-range-index.html

* bindings/scripts/CodeGeneratorJS.pm:
(GenerateImplementation):
* bindings/scripts/CodeGeneratorV8.pm:
(GenerateImplementationIndexer):
* bindings/v8/V8Collection.h:
(WebCore::collectionStringOrUndefinedIndexedPropertyGetter):
(WebCore::setCollectionStringOrUndefinedIndexedGetter):

LayoutTests:

Added a test to verify itemType[index], itemRef[index], itemProp[index]
behavior for out-of-range index.

Rebased existing test cases for IndexedGetter property.

* fast/dom/HTMLElement/class-list-expected.txt:
* fast/dom/HTMLElement/class-list-quirks-expected.txt:
* fast/dom/HTMLElement/script-tests/class-list.js:
* fast/dom/HTMLOutputElement/dom-settable-token-list-expected.txt:
* fast/dom/HTMLOutputElement/script-tests/dom-settable-token-list.js:
* fast/dom/MicroData/domsettabletokenlist-attributes-out-of-range-index-expected.txt: Added.
* fast/dom/MicroData/domsettabletokenlist-attributes-out-of-range-index.html: Added.
* fast/dom/StyleSheet/css-medialist-item-expected.txt:
* fast/dom/StyleSheet/script-tests/css-medialist-item.js:
* storage/indexeddb/database-basics-expected.txt:
* storage/indexeddb/objectstore-basics-expected.txt:
* storage/indexeddb/objectstore-basics-workers-expected.txt:
* storage/indexeddb/resources/database-basics.js:
(createObjectStore):
* storage/indexeddb/resources/objectstore-basics.js:
(checkMetadata):


Canonical link: https://commits.webkit.org/111186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124859 268f45cc-cd09-0410-ab3c-d52691b4dbfc