LayoutTests/fast/dom/HTMLElement/script-tests/class-list.js
@@ -87,7 +87,7 @@ shouldBeEqualToString('element.className', '');
 
 element = document.createElement('span');
 shouldBeFalse('element.classList.contains(\'x\')');
-shouldBeNull('element.classList[1]');
+shouldBeUndefined('element.classList[1]');
 element.classList.remove('x');
 element.classList.add('x')
 
@@ -197,11 +197,11 @@ shouldBeEqualToString('element.classList[1]', 'y');
 shouldBeEqualToString('element.classList.item(1)', 'y');
 
 createElement('');
-shouldBeNull('element.classList[0]');
+shouldBeUndefined('element.classList[0]');
 shouldBeNull('element.classList.item(0)');
 
 createElement('x y z');
-shouldBeNull('element.classList[4]');
+shouldBeUndefined('element.classList[4]');
 shouldBeNull('element.classList.item(4)');
 shouldBeUndefined('element.classList[-1]');  // Not a valid index so should not trigger item().
 shouldBeNull('element.classList.item(-1)');
